[package]
name = "guard"
version = "0.3.0"
authors = ["Alex Burka <rust@alexburka.com>"]

description = "Macro implementation of RFC 1303: a guard-let-else statement a la Swift"
homepage = "https://github.com/durka/guard"
repository = "https://github.com/durka/guard"
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = ["guard", "if", "let", "else", "1303"]

[features]
nightly = []
debug = []

